--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jest": "^26.1.0",
+    "kafka-node": "^5.0.0",
     "mongoose": "^5.9.26",
     "supertest": "^4.0.2",
     "typescript": "^3.9.7"
